--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,42 @@
     <title>Exercice hebdomadaire 5</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="calendar">
+      <div class="wrapper">
+        <div class="Day">
+          <div class="six">6</div>
+          <div class="Mon">Mon</div>
+        </div>
+        <div class="Day">
+          <div class="six">7</div>
+          <div class="Mon">Tue</div>
+        </div>
+        <div class="Day">
+          <div class="six">8</div>
+          <div class="Mon">Wed</div>
+      </div>
+      <div class="Day-current">
+        <div class="neuf">9</div>
+        <div class="Thu">Thu</div>
+    </div>
+    <div class="Day">
+      <div class="six">10</div>
+      <div class="Mon">Fri</div> </div>
+      <div class="Day">
+        <div class="six">11</div>
+        <div class="Mon">Sat</div> 
+        </div>
+        <div class="Day">
+          <div class="six">12</div>
+          <div class="Mon">Sun</div> 
+      </div>
+
+        
 
     <script src="js/main.js" type="module"></script>
   </body>
